# PBLCourseAgent

./: .env.example  .gitignore  .gitmodules  2025-09-28-docsprdmd-prd.txt  AGENTS.md  ARCHITECTURE_REALIGNMENT.md  CLAUDE.md  CONTRIBUTING.md  DELIVERY_REPORT_PHASE2.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_VERIFICATION_GUIDE.md  README-V3.md  README.md  UV_GUIDE.md  quick_start.py  start_dev.py
backend/: .env.example  pyproject.toml  requirements.txt  test_artifact_integration.py  test_artifact_new_scenarios.py  test_frontend_workflow.py  test_full_workflow.py  test_markdown_agents.py  test_stage1.py
backend/app/: main.py
backend/app/agents/: __init__.py  assessment_framework_agent.py  assessment_framework_v3.py  course_chat_agent.py  learning_blueprint_agent.py  learning_blueprint_v3.py  project_foundation_agent.py  project_foundation_v3.py  stage_agents.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  openai_client.py  openai_streaming.py  workflow_service.py
backend/app/models/: __init__.py  course_project.py  schemas.py  stage_data.py
backend/app/prompts/: README.md
backend/app/services/: ai_service.py  export_service.py  validation_service.py  workflow_service_v3.py
backend/app/templates/: course_export_v3.md.jinja2  ubd_stage_templates.py
backend/app/tests/: README.md  conftest.py  test_assessment_framework_agent.py  test_chat_agent.py  test_chat_artifact.py  test_chat_integration.py  test_core_workflow.py  test_export_integration.py  test_export_service.py  test_golden_standard.py  test_main.py  (+3 more)
(+120 files in other folders)
